# ALICE_TRD_hv_analysis

./: .gitignore  README.md  all.C  all.h  all_pres.C  all_pres_lumi.C  analysis_run  hv_2017_2018.C  number.py  plot.C  plot.h  pres.py  radial.C  solid_angle_TRD.ipynb  spreadOfHV.C  test.C
code/2018/: CMakeLists.txt
code/2018/apps/: CMakeLists.txt
code/2018/apps/src/: analysis_run.cpp
code/2018/test/: analysis_base.cpp
condorscripts/: CondorRun.sh  CondorRunJob.sh  SubmitCondor.sh  root.sh
create_chamber_map/: outfile.txt  textfile.py
create_csv/: align_all.sh  align_all_noWeights.sh  align_all_withWeights.sh  align_all_withWeights_pressure.sh  align_time.sh
create_csv/code/: convertCSV.C  convertCSV_all.C  makecsv  (+9 more)
drfit_channel/: ana_61.C  ana_61.h
errordetect/: detect.C  errordraw.C
gain/: cor2017.C  cor2017.h  cor2018.C  cor2018.h
hv_ALICE/: analysis_sorted1.C  analysis_sorted1.h  analysis_sorted122.C  analysis_sorted122.h  analysis_sorted2.C  analysis_sorted2.h  analysis_sorted3.C  analysis_sorted3.h  analysis_sorted4.C  analysis_sorted4.h  analysis_sorted486.C  analysis_sorted486.h  analysis_sorted5.C  analysis_sorted5.h  analysis_sorted6.C  analysis_sorted6.h
output_files/: connect.C  connectGraph.C  fit_stack_0_4.C  fit_stack_all.C  test.C
test_dir/: analysis_run.C  analysis_run.h
test_run/: analysis_hist.h  analysis_hv.h  analysis_run.C  analysis_run.h
vdm/: calc.txt  drawAnodeCurrents.C  drawdecay.C  getAnodeCurrent.C  getBunchIntensities.C  getV0rate_correction.C  gettimes.C  getv0root.C
working_chambers/: start.sh  working.C
(+119 files in other folders)
